Improve code [fix warnings]